feat: add movie card component and update routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,15 @@
-<router-outlet></router-outlet>
+<div class="relative min-h-screen">
+
+  <!-- navbar -->
+
+  <main>
+    <!-- app-hero -->
+    <div class="pb-20">
+
+      <router-outlet/>
+
+    </div>
+
+  </main>
+
+</div>
