--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -35,7 +35,7 @@
       <!-- TODO: Add search bar -->
       <div class="flex items-center space-x-4">
         <div class="relative">
-          <!-- TODO: Search component -->
+          <app-search />
         </div>
       </div>
     </div>
