--- a/src/app/features/movies/movies.component.html
+++ b/src/app/features/movies/movies.component.html
@@ -1,3 +1,5 @@
+<app-movie-row [title]="'Popular Movies'" [movies]="movies()"/>
+
 <div class="grid grid-col-2 gap-4 px-4 mx-auto mt-6 max-w-7xl md:grid-cols-4 lg:grid-cols-6">
 
   @for (movie of movies(); track $index) {
