--- a/src/app/features/movies/movie-card/movie-card.component.html
+++ b/src/app/features/movies/movie-card/movie-card.component.html
@@ -1,4 +1,4 @@
-<div class="cursor-pointer" role="button">
+<div class="cursor-pointer movie-card" role="button">
 <img [src]="getImageUrl()" (error)="setImageError(true)" [alt]="movie().title" class="aspecto-[2/3]" />
 <div class="movie-card-overlay">
   <div class="movie-card-content">
