--- a/src/app/features/movies/movie-details/movie-details.component.html
+++ b/src/app/features/movies/movie-details/movie-details.component.html
@@ -9,8 +9,7 @@
       @let movieData = movie.value();
 
        <div class="grid gap-8  mt-12 md:grid-cols-2">
-         <img [src]="'https://image.tmdb.org/t/p/w500' + movieData?.poster_path" [alt]="movieData?.title" class="w-full runded-lg">
-
+         <img [src]="getImageUrl(movieData?.poster_path ?? null)" [alt]="movieData?.title" class="w-full runded-lg">
 
 
         <div>
