--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -29,15 +29,13 @@
             class="text-white transition-colors hover:text-netflix-gray"
             >My List</a
           >
+          <div class="ml-4 flex items-center">
+            <app-search />
+          </div>
         </div>
       </div>
 
       <!-- TODO: Add search bar -->
-      <div class="flex items-center space-x-4">
-        <div class="relative">
-          <app-search />
-        </div>
-      </div>
     </div>
   </div>
 </nav>
