--- a/src/app/layout/hero/hero.component.html
+++ b/src/app/layout/hero/hero.component.html
@@ -2,7 +2,7 @@
 @if(movieData){
   <div class="relative h-[80vh] w-full">
     <div class="absolute inset-0">
-    <img src="https://image.tmdb.org/t/p/w500/{{movieData.backdrop_path}}" alt="{{movieData.title}}" class="object-cover w-full h-full">
+    <img src="https://image.tmdb.org/t/p/w500/{{movieData.backdrop_path}}" alt="{{movieData.title}}" class="object-contain w-full h-full">
     <div class="absolute inset-0 bg-gradient-to-r from-black via-black/50 to-transparent"></div>
   </div>
 
@@ -10,15 +10,6 @@
 <div class="w-full px-4 md:px-16 md:w2/3 lg:w-1/2">
 <h1 class="mb-4 text-3xl font-bold text-white md:text-5xl">{{movieData.title}}</h1>
 <p class="mb-8 text-lg text-white">{{movieData.overview}}</p>
-
-  <div class="flex space-x-4">
-    <button class="px-8 py-2 text-black bg-white rounded hover:bg-white/90">
-      ▶️ Ver Trailer
-    </button>
-    <button class="px-8 py-2 text-white bg-gray-500/70 rounded hover:bg-gray-500/50">
-      ℹ️ Más información
-    </button>
-  </div>
 
     </div>
   </div>
