--- a/src/app/layout/navbar/search/search.component.html
+++ b/src/app/layout/navbar/search/search.component.html
@@ -2,7 +2,7 @@
   <div class="relative w-80">
     <input
       type="text"
-      class="pl-2 h-8 text-white border border-gray-700 rounded-md w-full bg-black/60 focus:outline-none focus:border-white pr-8"
+      class="pl-2 h-8 text-black border border-gray-700 rounded-md w-full bg-white/80 focus:outline-none focus:border-netflix-red pr-8 placeholder-gray-500"
       placeholder="Buscar..."
       [(ngModel)]="searchQuery"
     />
