--- a/src/app/features/movies/movie-row/movie-row.component.html
+++ b/src/app/features/movies/movie-row/movie-row.component.html
@@ -2,37 +2,81 @@
   <h2 class="mb-4 text-xl font-semibold text-white md:text-2xl">
     {{ title() }}
   </h2>
-  <div class="grid grid-cols-2 gap-4 md:grid-cols-4">
-    @for (movie of movies().slice(0, 4); track movie.id) {
-    <div
-      class="relative transition duration-200 ease-in transform cursor-pointer group sm:hover:scale-105"
+  <div class="flex items-center">
+    <button
+      (click)="prevPage()"
+      [disabled]="page === 0"
+      class="p-3 mr-2 text-white transition-all duration-300 rounded-full shadow-lg bg-netflix-red hover:bg-netflix-red-dark disabled:opacity-30 flex items-center justify-center"
     >
-      <img
-        [src]="getImageUrl(movie.poster_path)"
-        [alt]="movie.title"
-        class="object-cover w-full rounded-md"
-      />
-      <div
-        class="absolute inset-0 rounded-md flex items-center justify-center transition-all duration-200 bg-black bg-opacity-0 group-hover:bg-opacity-60"
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="w-6 h-6"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
       >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M15 19l-7-7 7-7"
+        />
+      </svg>
+    </button>
+    <div class="grid grid-cols-2 gap-4 md:grid-cols-4 flex-1">
+      @for (movie of pagedMovies; track movie.id) {
+      <div
+        class="relative transition duration-200 ease-in transform cursor-pointer group sm:hover:scale-105"
+      >
+        <img
+          [src]="getImageUrl(movie.poster_path)"
+          [alt]="movie.title"
+          class="object-cover w-full rounded-md"
+        />
         <div
-          class="p-4 text-center text-white opacity-0 group-hover:opacity-100"
+          class="absolute inset-0 rounded-md flex items-center justify-center transition-all duration-200 bg-black bg-opacity-0 group-hover:bg-opacity-60"
         >
-          <h3 class="font-semibold">{{ movie.title }}</h3>
-          <div class="flex space-x-2 justify-center mt-2">
-            <button class="p-2 rounded-md bg-white/20 hover:bg-white/40">
-              ▶️ Ver Trailer
-            </button>
-            <button
-              class="p-2 rounded-md bg-white/20 hover:bg-white/40"
-              (click)="goToDetails(movie.id)"
-            >
-              ℹ️ Más información
-            </button>
+          <div
+            class="p-4 text-center text-white opacity-0 group-hover:opacity-100"
+          >
+            <h3 class="font-semibold">{{ movie.title }}</h3>
+            <div class="flex space-x-2 justify-center mt-2">
+              <button class="p-2 rounded-md bg-white/20 hover:bg-white/40">
+                ▶️ Ver Trailer
+              </button>
+              <button
+                class="p-2 rounded-md bg-white/20 hover:bg-white/40"
+                (click)="goToDetails(movie.id)"
+              >
+                ℹ️ Más información
+              </button>
+            </div>
           </div>
         </div>
       </div>
+      }
     </div>
-    }
+    <button
+      (click)="nextPage()"
+      [disabled]="(page + 1) * pageSize >= movies().length"
+      class="p-3 ml-2 text-white transition-all duration-300 rounded-full shadow-lg bg-netflix-red hover:bg-netflix-red-dark disabled:opacity-30 flex items-center justify-center"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="w-6 h-6"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M9 5l7 7-7 7"
+        />
+      </svg>
+    </button>
   </div>
 </div>
