--- a/src/app/features/movies/movie-details/movie-details.component.html
+++ b/src/app/features/movies/movie-details/movie-details.component.html
@@ -8,9 +8,9 @@
       >
         <button
           (click)="goBack()"
-          class="flex items-center justify-center gap-2 mb-2 md:mb-0 md:mr-4 px-2 py-1 min-w-[90px] rounded bg-white/10 border border-netflix-red text-netflix-red font-semibold shadow hover:bg-netflix-red hover:text-white transition-colors duration-200 text-center"
+          class="flex items-center justify-center gap-2 mb-2 md:mb-0 md:mr-4 px-2 py-1 min-w-[90px] rounded bg-white/10 border border-netflix-red text-white font-semibold shadow hover:bg-netflix-red hover:text-white transition-colors duration-200 text-center"
         >
-          Go back
+          Volver
         </button>
         <img
           [src]="getImageUrl(movieData?.poster_path ?? null)"
@@ -34,6 +34,12 @@
             {{ movieData?.vote_average | number : "1.1-1" }}/10
           </p>
         </div>
+        <button
+          (click)="verTrailer()"
+          class="mt-4 p-2 rounded-md bg-white/20 hover:bg-white/40 text-white font-semibold transition-colors duration-200 w-full md:w-auto"
+        >
+          ▶️ Ver Trailer
+        </button>
       </div>
     </div>
 
