--- a/src/app/features/movies/movie-row/movie-row.component.html
+++ b/src/app/features/movies/movie-row/movie-row.component.html
@@ -43,13 +43,13 @@
             <h3 class="font-semibold">{{ movie.title }}</h3>
             <div class="flex space-x-2 justify-center mt-2">
               <button
-                class="p-2 rounded-md bg-white/20 hover:bg-white/40"
+                class="p-2 rounded-md bg-white/20 hover:bg-white/40 text-sm"
                 (click)="verTrailer(movie.id)"
               >
                 ▶️ Ver Trailer
               </button>
               <button
-                class="p-2 rounded-md bg-white/20 hover:bg-white/40"
+                class="p-2 rounded-md bg-white/20 hover:bg-white/40 text-sm"
                 (click)="goToDetails(movie.id)"
               >
                 ℹ️ Más información
